Fix error z-index w.r.t. cover card

--- a/client/src/menu/anchor.css
+++ b/client/src/menu/anchor.css
@@ -83,7 +83,6 @@
     border-right-color: black;
     border-bottom-color: black;
     overflow-y: hidden;
-    z-index: 80;
 }
 
 .anchor-cover-card-content {
